force-app/main/default/objects/Country_to_Region__mdt/Country_to_Region__mdt.object-meta.xml
<CustomObject>
    <label>Country to Region</label>
    <pluralLabel>Countries to Regions</pluralLabel>
</CustomObject>