force-app/main/default/objects/Country_to_Region__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>