force-app/main/default/objects/Country_to_Region__mdt/fields/CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyISOCode__c</fullName>
    <label>Currency ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>