force-app/main/default/objects/Country_to_Region__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>UK &amp; Ireland</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>